tests/fail/matching/different binders order.mmu
(sort s     ) 
(term a ((y s ())(x s ())) (s ())